fix deploy config.json

--- a/config/config.json
+++ b/config/config.json
@@ -16,9 +16,8 @@
 	"production": {
 		"use_env_variable": "DATABASE_URL",
 		"dialect": "postgres",
-		"dialecOption": {
+		"dialectOptions": {
 			"ssl": {
-				"require": true,
 				"rejectUnauthorized": false
 			}
 		}
